# spix-mcp

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
.well-known/mcp/: server-card.json
src/spix_mcp/: __init__.py  __main__.py  client.py  envelope.py  install.py  registry.py  resources.py  server.py  session.py  tools.py
